--- a/.github /workflows/vwap2.yml
+++ b/.github /workflows/vwap2.yml
@@ -1,11 +1,11 @@
-name: Nifty50 VWAP 20
+name: Nifty Option data 
 #
 on:
   push:
     branches:
       - main
   schedule:
-    - cron: "*/1 3-11 * * 1-5"   # Every minute 09:00–09:59 IST Mon–Fri
+    - cron: "*/1 3-9 * * 1-5"   # Every minute 09:00–15:29 IST, Mon–Fri
     - cron: "0 10 * * 1-5"      # At 15:30 IST exact
   workflow_dispatch:
     inputs:
@@ -22,7 +22,8 @@ jobs:
       group: nifty-update
       cancel-in-progress: true
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -33,11 +34,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install lxml requests pandas gspread oauth2client urllib3 pytz
+          pip install lxml
+          python -m pip install --upgrade pip
+          pip install requests pandas gspread oauth2client urllib3 pytz
 
       - name: Set up Google credentials
         run: |
-          printf "%s" "${GOOGLE_CREDENTIALS}" > "$GITHUB_WORKSPACE/service_account.json"
+          echo "${GOOGLE_CREDENTIALS}" > "$GITHUB_WORKSPACE/service_account.json"
           test -s "$GITHUB_WORKSPACE/service_account.json" || { echo "❌ Credentials file is empty"; exit 1; }
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
@@ -47,9 +50,14 @@ jobs:
           SHEET_ID: ${{ secrets.SHEET_ID }}
           POLLING_INTERVAL: 60
           GOOGLE_CREDENTIALS_PATH: ${{ github.workspace }}/service_account.json
-        run: python vwap_data.py
+        run: python NSE_Option_Chainonline.py
 
-      
+      - name: Upload logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: script-logs
+          path: option_chain_updater1.log
 
   code2:
     if: ${{ github.event.inputs.run_code2 == 'true' }}
@@ -58,7 +66,8 @@ jobs:
       group: nifty-update
       cancel-in-progress: true
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -72,7 +81,7 @@ jobs:
 
       - name: Set up Google credentials
         run: |
-          printf "%s" "${GOOGLE_CREDENTIALS}" > "$GITHUB_WORKSPACE/service_account.json"
+          echo "${GOOGLE_CREDENTIALS}" > "$GITHUB_WORKSPACE/service_account.json"
           test -s "$GITHUB_WORKSPACE/service_account.json" || { echo "❌ Credentials file is empty"; exit 1; }
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
@@ -89,9 +98,16 @@ jobs:
           ist = pytz.timezone("Asia/Kolkata")
           now = datetime.datetime.now(ist).time()
           market_open = datetime.time(9, 10)
-          market_close = datetime.time(18, 30)
+          market_close = datetime.time(15, 30)
           if not (market_open <= now <= market_close):
               print("📉 Market is closed, exiting workflow.")
-          sys.exit(0)
+              sys.exit(0)
           EOF
-          python vwap_data.py
+          python nse_data.py
+
+      - name: Upload logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: script-logs
+          path: option_chain_updater1.log
