--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests pandas gspread oauth2client urllib3 pytz
+          pip install --no-cache-dir -r requirements.txt
+          
 
       - name: Set up Google credentials
         run: |
