--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-nselib==1.4.0
-pandas
-pandas_market_calendars
-gspread
-oauth2client
-pytz
-requests
+unofficed==0.3.8
+pandas==2.2.2
+gspread==6.1.2
+oauth2client==4.1.3
+pytz==2024.1
