--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: Nifty Option Chain Update
 
 on:
   schedule:
-    - cron: '*/2 3-12 * * 1-5'
-  workflow_dispatch:
-
+    - cron: "*/1 3-9 * * 1-5"  
+    - cron: "0 10 * * 1-5"
 jobs:
   run:
     runs-on: ubuntu-latest
